[HTML] Homepage | [SCSS] Styling responsive font-size + Custom CSS Btn Outline

--- a/index.html
+++ b/index.html
@@ -64,6 +64,26 @@ Made By D3VS3C
       </div>
     </nav>
 
+    <!-- [Main] Content -->
+    <main>
+      <section>
+        <div class="content_center_xy content_center_lg">
+          
+          <small>OPEN SOURCE PROJECT | MIT</small>
+
+          <h1 class="fw-bold pb-2 pb-lg-4">
+            Front-End Web Developer
+          </h1>
+
+          <a class="btn_outline_custom fw-bold text-capitalize" 
+             href="#">Read More</a>
+
+          <p><small>Version 1.0</small></p>
+
+        </div>
+      </section>
+    </main>
+
     <!-- WebPack [Bundled] JavaScript -->
     <script async defer src="bundle.js"></script>
   </body>
