[Added] Font weight bold class, increased padding, title and btn text change | UI/UX Changes

--- a/index.html
+++ b/index.html
@@ -69,16 +69,16 @@ Made By D3VS3C
       <section>
         <div class="content_center_xy content_center_lg">
           
-          <small>OPEN SOURCE PROJECT | MIT</small>
+          <small class="fw-bold">OPEN SOURCE PROJECT | MIT</small>
 
-          <h1 class="fw-bold pb-2 pb-lg-4">
-            Front-End Web Developer
+          <h1 class="fw-bold pb-3 pb-lg-4">
+            FULL-STACK DEVELOPER
           </h1>
 
           <a class="btn_outline_custom fw-bold text-capitalize" 
-             href="#">Read More</a>
+             href="#">Coming Soon</a>
 
-          <p><small>Version 1.0</small></p>
+          <p class="fw-bold"><small>Version 1.0</small></p>
 
         </div>
       </section>
