[Added] Fontello icons

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Made By D3VS3C
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <title>DEVSEC IO</title>
-    <!-- <link rel="" type="" href=""> -->
+    <link rel="stylesheet" href="/src/scss/fontello.css">
   </head>
 
   <body>
@@ -21,7 +21,9 @@ Made By D3VS3C
       <div class="container-fluid">
 
         <a class="navbar-brand fw-bold" 
-           href="http://127.0.0.1:8000">DEVSEC IO</a>
+           href="http://127.0.0.1:8000">
+          <i class="icon-code"></i> DEVSEC IO
+        </a>
 
         <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around" 
                 type="button" 
@@ -69,7 +71,9 @@ Made By D3VS3C
       <section>
         <div class="content_center_xy content_center_lg">
           
-          <small class="fw-bold">OPEN SOURCE PROJECT | MIT</small>
+          <small class="fw-bold">
+            <i class="icon-html5-1"></i>OPEN SOURCE PROJECT | MIT
+          </small>
 
           <h1 class="fw-bold pb-3 pb-lg-4">
             FULL-STACK DEVELOPER
@@ -78,7 +82,11 @@ Made By D3VS3C
           <a class="btn_outline_custom fw-bold text-capitalize" 
              href="#">Coming Soon</a>
 
-          <p class="fw-bold"><small>Version 1.0</small></p>
+          <p class="mt-4 fw-bold">
+          <small>
+            <i class="icon-github-circled"></i> | Version 1.0
+          </small>
+          </p>
 
         </div>
       </section>
