[UI Tweaks] Fix btn radius , added margin + Link to Github

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Made By D3VS3C
             <li class="nav-item">
               <a class="nav-link active" 
                  aria-current="page" 
-                 href="#">HOME</a>
+                 href="http://127.0.0.1:8000">HOME</a>
             </li>
 
             <!-- CSS [Dark/Light] Theme Switcher Toggle -->
@@ -82,9 +82,12 @@ Made By D3VS3C
           <a class="btn_outline_custom fw-bold text-capitalize" 
              href="#">Coming Soon</a>
 
-          <p class="mt-4 fw-bold">
+          <p class="mt-5 fw-bold">
           <small>
-            <i class="icon-github-circled"></i> | Version 1.0
+            <a href="https://github.com/D3VS3C-Github">
+              <i class="icon-github-circled"></i> 
+            </a>
+             | Version 1.0
           </small>
           </p>
 
