--- a/resources.html
+++ b/resources.html
@@ -1,7 +1,3 @@
-<!--
-Open Source Project | HTML5 Template
-Made By D3VS3C
--->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -78,6 +74,48 @@ Made By D3VS3C
 
       </div>
     </section>
+
+    <section class="container_w100">
+      <div class="container">
+        <div class="m-3 pt-5">
+
+          <h2 class="display-5 fw-bold text-center">SUBHEADING</h2>
+
+          <div class="row mt-5">
+            <div class="col-12 col-md-4">
+              <div class="card_custom">
+                <div class="card_content">
+                  <h3>HTML | 5</h3>
+                  <small>HYPERTEXT MARKUP LANGUAGE</small>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-md-4">
+              <div class="card_custom">
+                <div class="card_content">
+                  <h3>CSS | 3</h3>
+                  <small>CASCADING STYLESHEET</small>
+                </div>
+              </div>
+
+            </div>
+            <div class="col-12 col-md-4">
+              <div class="card_custom">
+                <div class="card_content">
+                  <h3>JS | ES6+</h3>
+                  <small>JAVASCRIPT</small>
+                </div>
+              </div>
+
+            </div>
+
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <!-- OPTIMIZED Version -->
   </main>
 
   <!-- WebPack [Bundled] JavaScript -->
