Resources.html UNFINISHED[needs optimization]

--- a/resources.html
+++ b/resources.html
@@ -77,6 +77,7 @@
 
     <section class="container_w100">
       <div class="container">
+
         <div class="m-3 pt-5">
 
           <h2 class="display-5 fw-bold text-center">SUBHEADING</h2>
@@ -111,6 +112,24 @@
 
           </div>
 
+        </div>
+
+
+        <div class="m-3 pt-3 text-center fw-bold w100_color">
+          <small class="mt-5">LEARN THE BASICS | MINIMUM REQUIREMENTS</small>
+          <h4>HEADING H4</h4>
+        </div>
+
+        <div class="banner_container">
+          <div class="banner_content">
+            <div class="banner_header">
+              <small>OPEN SOURCE | WEBSITES</small>
+              <h5>Card Title Website</h5>
+            </div>
+            <div class="banner_btn_container">
+              <a href="#" class="btn btn-primary">View</a>
+            </div>
+          </div>
         </div>
       </div>
     </section>
