[Semantic Version] added prefix -beta.1

--- a/index.html
+++ b/index.html
@@ -5,97 +5,90 @@ Made By D3VS3C
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <!-- [REQUIRED] Meta Tags -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+<head>
+  <!-- [REQUIRED] Meta Tags -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>DEVSEC IO</title>
-    <link rel="stylesheet" href="/src/scss/fontello.css">
-  </head>
+  <title>DEVSEC IO</title>
+  <link rel="stylesheet" href="/src/scss/fontello.css">
+</head>
 
-  <body>
-    <!-- [BOOTSTRAP] Navigation Bar | DEFAULT -->
-    <nav class="navbar navbar-expand-lg">
-      <div class="container-fluid">
+<body>
+  <!-- [BOOTSTRAP] Navigation Bar | DEFAULT -->
+  <nav class="navbar navbar-expand-lg">
+    <div class="container-fluid">
 
-        <a class="navbar-brand fw-bold" 
-           href="http://127.0.0.1:8000">
-          <i class="icon-code"></i> DEVSEC IO
-        </a>
+      <a class="navbar-brand fw-bold" href="http://127.0.0.1:8000">
+        <i class="icon-code"></i> DEVSEC IO Beta
+      </a>
 
-        <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around" 
-                type="button" 
-                data-bs-toggle="collapse" 
-                data-bs-target="#navbarNav" 
-                aria-controls="navbarNav" 
-                aria-expanded="false" 
-                aria-label="Toggle navigation">
-          
-          <!-- [Animated] Custom Hamburger Menu -->
-          <span class="toggler_icon bar--top"></span>
-          <span class="toggler_icon bar--mid"></span>
-          <span class="toggler_icon bar--low"></span>
-        </button>
+      <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around" type="button"
+        data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+        aria-label="Toggle navigation">
 
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+        <!-- [Animated] Custom Hamburger Menu -->
+        <span class="toggler_icon bar--top"></span>
+        <span class="toggler_icon bar--mid"></span>
+        <span class="toggler_icon bar--low"></span>
+      </button>
 
-            <li class="nav-item">
-              <a class="nav-link active" 
-                 aria-current="page" 
-                 href="http://127.0.0.1:8000">HOME</a>
-            </li>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
 
-            <!-- CSS [Dark/Light] Theme Switcher Toggle -->
-            <div class="theme_toggle">
-              <input type="checkbox" id="switch" name="theme">
-              <label for="switch">Toggle</label>
-            </div>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000">HOME</a>
+          </li>
 
-            <!--
+          <!-- CSS [Dark/Light] Theme Switcher Toggle -->
+          <div class="theme_toggle">
+            <input type="checkbox" id="switch" name="theme">
+            <label for="switch">Toggle</label>
+          </div>
+
+          <!--
             <li class="nav-item">
               <a class="nav-link disabled">Disabled</a>
             </li>
             -->
 
-          </ul>
-        </div>
-
+        </ul>
       </div>
-    </nav>
 
-    <!-- [Main] Content -->
-    <main>
-      <section>
-        <div class="content_center_xy content_center_lg">
-          
-          <small class="fw-bold">
-            <i class="icon-html5-1"></i>OPEN SOURCE PROJECT | MIT
-          </small>
+    </div>
+  </nav>
 
-          <h1 class="fw-bold pb-3 pb-lg-4">
-            FULL-STACK DEVELOPER
-          </h1>
+  <!-- [Main] Content -->
+  <main>
+    <section>
+      <div class="content_center_xy content_center_lg">
 
-          <a class="btn_outline_custom fw-bold text-capitalize" 
-             href="#">Coming Soon</a>
+        <small class="fw-bold">
+          <i class="icon-html5-1"></i>OPEN SOURCE PROJECT | MIT
+        </small>
 
-          <p class="mt-5 fw-bold">
+        <h1 class="fw-bold pb-3 pb-lg-4">
+          FULL-STACK DEVELOPER
+        </h1>
+
+        <a class="btn_outline_custom fw-bold text-capitalize" href="#">Coming Soon</a>
+
+        <p class="mt-5 fw-bold">
           <small>
             <a href="https://github.com/D3VS3C-Github">
-              <i class="icon-github-circled"></i> 
+              <i class="icon-github-circled"></i>
             </a>
-             | Version 1.0
+            | Version 1.0.0-beta.1
           </small>
-          </p>
+        </p>
 
-        </div>
-      </section>
-    </main>
+      </div>
+    </section>
+  </main>
 
-    <!-- WebPack [Bundled] JavaScript -->
-    <script async defer src="bundle.js"></script>
-  </body>
+  <!-- WebPack [Bundled] JavaScript -->
+  <script async defer src="bundle.js"></script>
+</body>
+
 </html>
