[Fix] mobile hamburger menu does not display on medium size screen and above

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ Made By D3VS3C
 
 <body>
   <!-- [BOOTSTRAP] Navigation Bar | DEFAULT -->
-  <nav class="navbar navbar-expand-lg">
+  <nav class="navbar navbar-expand-md">
     <div class="container-fluid">
 
       <a class="navbar-brand fw-bold" href="http://127.0.0.1:8000">
@@ -29,9 +29,9 @@ Made By D3VS3C
         aria-label="Toggle navigation">
 
         <!-- [Animated] Custom Hamburger Menu -->
-        <span class="toggler_icon bar--top"></span>
-        <span class="toggler_icon bar--mid"></span>
-        <span class="toggler_icon bar--low"></span>
+        <span class="toggler_icon bar--top d-md-none"></span>
+        <span class="toggler_icon bar--mid d-md-none"></span>
+        <span class="toggler_icon bar--low d-md-none"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarNav">
