--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!--
 Open Source Project | HTML5 Template
 Made By D3VS3C
+$| HOMEPAGE
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -11,7 +12,7 @@ Made By D3VS3C
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <title>DEVSEC IO</title>
+  <title>DEVSEC IO Beta</title>
   <link rel="stylesheet" href="/src/scss/fontello.css">
 </head>
 
